Fixing up gap stuff, adding hide/show classes, fixing up base font stuff

--- a/assets/scss/layout/_helper-classes.scss
+++ b/assets/scss/layout/_helper-classes.scss
@@ -29,6 +29,18 @@
   text-transform: uppercase;
 }
 
+// Hide / Show Class
+
+.hide {
+  display: none;
+}
+
+.hide--on-md {
+  @include bp(md) {
+    display: none;
+  }
+}
+
 // Structural Classes
 
 %clearfix {
