--- a/assets/scss/settings/_dimensions.scss
+++ b/assets/scss/settings/_dimensions.scss
@@ -8,11 +8,11 @@ $gap-xs: $gap * .4;
 $gap-sm: $gap * .7;
 $gap-lg: $gap * 1.5;
 $gap-xl: $gap * 2;
-$gap-fluid-: 5%;
-$gap-fluid-xs: $gap * .5;
-$gap-fluid-sm: $gap * .75;
-$gap-fluid-lg: $gap * 2;
-$gap-fluid-xl: $gap * 3;
+$gap-fluid: 5%;
+$gap-fluid-xs: $gap-fluid * .5;
+$gap-fluid-sm: $gap-fluid * .75;
+$gap-fluid-lg: $gap-fluid * 2;
+$gap-fluid-xl: $gap-fluid * 3;
 $maxwidth: 1200px;
 $maxwidth-xs: $maxwidth * .4;
 $maxwidth-sm: $maxwidth * .8;
